# claude-marketplace-evaluator

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
example_plugins/collision-plugin/.claude-plugin/: plugin.json
example_plugins/collision-plugin/default-plugin/skills/create-pr/: SKILL.md
example_plugins/collision-plugin/default-plugin/skills/create-pr/evals/: evals.json
example_plugins/collision-plugin/default-plugin/skills/submit-pr/: SKILL.md
example_plugins/collision-plugin/skills/create-pr/: SKILL.md
example_plugins/collision-plugin/skills/submit-pr/: SKILL.md
example_plugins/collision-plugin/skills/submit-pr/evals/: evals.json
example_plugins/dev-tools/.claude-plugin/: plugin.json
example_plugins/dev-tools/default-plugin/skills/check-logs/evals/: evals.json
example_plugins/dev-tools/default-plugin/skills/open-pr/: SKILL.md
example_plugins/dev-tools/default-plugin/skills/open-pr/evals/: evals.json
example_plugins/dev-tools/default-plugin/skills/run-tests/: SKILL.md
example_plugins/dev-tools/skills/check-logs/: SKILL.md
example_plugins/dev-tools/skills/run-tests/evals/: evals.json
example_plugins/incomplete-plugin/.claude-plugin/: plugin.json
example_plugins/incomplete-plugin/default-plugin/skills/deploy-service/evals/: evals.json
example_plugins/incomplete-plugin/default-plugin/skills/format-code/: SKILL.md
example_plugins/incomplete-plugin/default-plugin/skills/rollback-deploy/: SKILL.md
example_plugins/incomplete-plugin/skills/deploy-service/: SKILL.md
example_plugins/incomplete-plugin/skills/format-code/evals/: evals.json
example_plugins/incomplete-plugin/skills/lint-code/: SKILL.md
src/cme/: __init__.py  cli.py  coverage.py  discover.py  generate.py  models.py  overlap.py  runner.py
tests/: test_cli.py  test_cli_overlap.py  test_cli_routing.py  test_coverage.py  test_discover.py  test_filter.py  test_generate.py  test_max_turns.py  test_models.py  test_overlap.py  test_runner.py
tests/integration/: test_overlap_integration.py  test_routing_integration.py
