[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-marketplace-evaluator"
version = "0.1.0"
description = "CLI for Claude Code marketplace health — routing evals, coverage checks, and semantic collision detection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "IceRhymers" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1.37",
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/IceRhymers/claude-marketplace-evaluator"
Repository = "https://github.com/IceRhymers/claude-marketplace-evaluator"
Issues = "https://github.com/IceRhymers/claude-marketplace-evaluator/issues"

[project.scripts]
cme = "cme.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cme"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cme"]

[tool.mypy]
python_version = "3.11"
files = ["src/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require fixture files)",
]
addopts = "-m 'not integration'"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
